--- a/css/style.css
+++ b/css/style.css
@@ -42,3 +42,12 @@ body {
       opacity: .45;
       color: white;
   }
+
+#googleMapResults {
+    height: 600px;
+    width: 100%;
+    position: absolute;
+    top: 200px;
+    left: 0;
+    z-index: 0;
+  }
