--- a/css/results.css
+++ b/css/results.css
@@ -5,7 +5,7 @@ body {
   max-height: 600px;
   max-width: 600px;
 }*/
-/*.container {
+.container {
   height: 600px;
   max-width: 1300px;
   position:relative;;
