--- a/css/style.css
+++ b/css/style.css
@@ -1,53 +1,29 @@
-body {
-
-}
-
 #googlemapsbackground {
-  height: 100%;
-  width: 100%;
-  position:absolute;
-  top: 0;
-  left: 0;
+  height: 40em;
+  width: 60em;
+  box-sizing: border-box;
+  display: block;
+  border: .1em solid #808080;
   z-index: 0;
 }
 
-#menu {
-  position: relative;
-    z-index: 1;
-}
-
-#menu nav {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-
-#menu a {
-  float: left;
+main > section {
   display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
+  width: 100%;
+  height: 0;
 }
 
-  button {
-    position: relative;
-      z-index: 2;
-      width: 300px;
-      margin: 60px auto 0;
-      padding: 10px;
-      background: black;
-      height: auto;
-      opacity: .45;
-      color: white;
-  }
-
-#googleMapResults {
-    height: 600px;
-    width: 100%;
-    position: absolute;
-    top: 200px;
-    left: 0;
-    z-index: 0;
-  }
+button {
+  display: inline-block;
+  width: 300px;
+  font-size: 2em;
+  font-family: sans-serif;
+  text-align: center;
+  vertical-align: middle;
+  margin-left: 37%;
+  margin-top: -12.5em;
+  padding: 10px;
+  background: black;
+  opacity: .45;
+  color: white;
+}
