--- a/css/contact.css
+++ b/css/contact.css
@@ -1,3 +1,42 @@
-body {
+main {
+  display: block;
+}
 
+nav {
+  border-bottom: .1em solid #808080;
+}
+
+fieldset {
+  display: block;
+  width: 100%;
+  margin: auto;
+  margin-top: .3em;
+  }
+
+legend {
+  display: block;
+  width: 100%;
+  border: .1em solid #808080;
+  font-family: sans-serif;
+  font-size: 1.25em;
+  background-color: #808080;
+  color: #FFFFFF;
+  text-align: center;
+}
+
+input, textarea {
+  display: block;
+  text-align: center;
+  vertical-align: middle;
+  margin: .5em auto;
+  padding: .5em;
+}
+
+#sub {
+  background-color: #808080
+  color: #FFFFFF;
+  width: 10em;
+  font-family: sans-serif;
+  font-size: .75em;
+  font-weight: bold;
 }
