batch_53_49_46_45 Removed drop down menu from results page and variable from results.js Fixed CSS for results.css Standardized margins for elements above footer Changed Nav color and text size and family Added methedology explanation to results page changed legend text in income entry form fixed randomizer and confirmed that results are now completely random

--- a/css/master.css
+++ b/css/master.css
@@ -47,13 +47,19 @@ nav{
 nav > a {
   display: inline-block;
   width: 8.5em;
-  font-family: 'Georgia', serif;
-  font-size: 1em;
+  font-family: sans-serif;
+  font-size: 1.25em;
   text-align: center;
-  color: #000000;
+  color: #808080;
   text-decoration: none;
   margin: auto;
   padding: .3125em;
+}
+
+main {
+  display: block;
+  margin: .3em auto;
+  padding: 0;
 }
 
 footer {
